<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView 
    	android:textAppearance="?android:attr/textAppearanceLarge" 
    	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content" 
    	android:id="@+id/textViewTituloPerfil" 
    	android:layout_gravity="center" 
    	android:text="@string/tituloPerfil">
    </TextView>
    <LinearLayout 
	    android:id="@+id/linearLayout1" 
	    android:layout_width="match_parent" 
	    android:layout_height="wrap_content"
    	>
        <TextView android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/lblPefilNome" android:id="@+id/textViewPerfilNome" android:layout_marginRight="10dip" android:layout_width="wrap_content"></TextView>
    	<TextView 
    		android:id="@+id/textViewNomeUsuario"
    		android:layout_height="wrap_content" 
    		android:layout_width="match_parent" 
    		android:textAppearance="?android:attr/textAppearanceMedium"> 
    	</TextView>
    </LinearLayout>
    <Button 
    	android:id="@+id/btnPerfilPergunta" 
    	android:layout_height="wrap_content" 
    	android:layout_width="match_parent" 
    	android:text="@string/btnFazerPergunta">
    </Button>
    <Button 
    	android:id="@+id/btnMinhasPerguntas" 
    	android:layout_width="match_parent" 
    	android:layout_height="wrap_content" 
    	android:text="@string/btnMinhasPerguntas">
    </Button>

    <Button
        android:id="@+id/btnResponderPergunta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnResponderPergunta" />

    <Button
        android:id="@+id/btnDeslogar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deslogarButton" />
    
</LinearLayout>
