<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <TextView 
    	android:layout_height="wrap_content" 
    	android:textAppearance="?android:attr/textAppearanceLarge" 
    	android:layout_width="wrap_content" 
    	android:text="@string/tituloMain" 
    	android:layout_gravity="center"
    	android:id="@+id/textViewTitulo"> 
    </TextView>
    <Button 
    	android:layout_height="wrap_content" 
    	android:text="@string/btnCadastro" 
    	android:layout_width="match_parent"
    	android:id="@+id/btnCadastro">
    </Button>
    <Button android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/btnLogin" android:text="@string/btnFazerLogin"></Button>
</LinearLayout>